# pacman-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: aarch64-linux-gnu.cmake
include/pacman/: app.hpp  audio.hpp  constants.hpp  controller_manager.hpp  ghost.hpp  input_router.hpp  maze.hpp  mode.hpp  multi_gameplay.hpp  pacman_entity.hpp  powerup_manager.hpp  render.hpp  score.hpp
packaging/emuelec/: DEPLOY-EMUELEC.md  Dockerfile.aarch64  build-arm64-native.sh  build-arm64.sh  deploy-from-dev.sh  gamelist.xml  install-emuelec.sh  pacman-reimagined.sh  pacmates-gamelist-entry.xml  pacmates.sh
scripts/: build.sh  gen_prd_maze.py  gen_wider_maze.py  install-x2.sh  smoke.sh
src/: app.cpp  audio.cpp  controller_manager.cpp  ghost.cpp  glibc_compat.c  input_router.cpp  main.cpp  maze.cpp  pacman.cpp  powerup_manager.cpp  score.cpp
src/modes/: alternating.cpp  coop.cpp  solo.cpp
src/scenes/: menu.cpp  mode_select.cpp  multi_gameplay.cpp
src/ui/: hud_dual.cpp  render.cpp  turn_swap.cpp
tests/: run_all.sh  smoke.sh  smoke_modes.sh  test_ai_playthrough.cpp  test_coop_logic.cpp  test_env.md  test_fuzz.cpp  test_game.cpp  test_ghost_ai.cpp  test_hotplug.cpp  test_level_clear.cpp  test_maze_edges.cpp  test_perf.cpp  test_powerups.cpp  test_regression.cpp  test_simulation.cpp
